# skirmishbunker

./: .gitignore  README.md  changes.md  pyproject.toml
documentation/: README.md
example/: blastDoor.py  bunker.py  bunker2.py  bunker3.py  bunker4_large_inset.py  bunker5_chamfer_flat_roof.py  bunker6_test_for_drift.py  bunkerPlate.py  bunker_med.py  bunker_small.py  bunker_small_custom_door.py  bunker_small_flatroof.py  catwalk.py  ex_01_outline.py  ex_02_angle.py  ex_03_interior.py  ex_04_cut.py  ex_05_arch_detail.py  ex_06_detail_panels.py  ex_07_base.py  ex_08_window_cut.py  ex_09_window_detail.py  ex_10_skip_windows.py  ex_10_skip_windows_old.py  ex_11_cut_door.py  ex_12_model_blast_door.py  ex_12_refactoring_series.py  ex_12_refactoring_series_old.py  ex_13_add_blast_door.py  ex_13_series_applied.py  ex_13_series_applied_old.py  ex_15_add_blast_door.py  ex_16_model_roof.py  ex_16a_tile_poc.py  ex_16b_int_floor.py  ex_17_add_roof.py  ex_18_build_plate.py  ex_18_int_floor.py  ex_18b_int_floor.py  ex_19a_roof_tile_poc.py  (+15 more)
gcode/: hatch.gcode
src/skirmishbunker/: Base.py  BlastDoor.py  Bunker.py  Catwalk.py  DetailedRoof.py  FlatRoof.py  Hatch.py  Roof.py  SeriesHelper.py  SplitDoor.py  __init__.py  bunkerBody.py  bunkerDoors.py  bunkerFloor.py  bunkerFloorCuts.py  bunkerLadders.py  bunkerPanels.py  bunkerPips.py  bunkerRoof.py  bunkerWindows.py
stl/: bunker.stl  bunker_small_custom_door.stl  ex_1.stl  flat_roof.stl  hatch.stl  rectangle.stl  roof.stl  splitDoor.stl
